--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/jujutsu-kaisen.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/seven-deadly-sins-1.jfif')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Fully Responsive Design</h2>
-                        <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                        <h2>Đồ họa đẹp mắt</h2>
+                        <p class="lead mb-0">Đồ họa bắt mắt , phù hợp với mọi thiết bị</p>
                     </div>
                 </div>
                 <div class="row g-0">
