--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>GameG</title>
+        <link rel="icon" type="imga/png" href="assets/icon.ico">
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
@@ -112,15 +113,15 @@
                 <div class="row g-0">
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
-                        <h2>Updated For Bootstrap 5</h2>
-                        <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
+                        <h2>Thể loại đa dạng</h2>
+                        <p class="lead mb-0">Lấy cảm hứng từ những bộ anime đình đám như naruto , one piece , jujutsu kaisen , studio chúng tôi đã cho ra mắt nhiều con game nổi tiếng , phù hợp với thị hiếu của giới trẻ.</p>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Easy to Use & Customize</h2>
-                        <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+                        <h2>Đồng bộ và tối ưu</h2>
+                        <p class="lead mb-0">Chỉ cần sử dụng 1 tài khoản , bạn đã có thể chơi game cả trên di động lẫn máy tính . Đồng thời game cũng được tối ưu để có thể phù hợp trên mọi thiết bị di động</p>
                     </div>
                 </div>
             </div>
@@ -128,20 +129,20 @@
         <!-- Testimonials-->
         <section class="testimonials text-center bg-light">
             <div class="container">
-                <h2 class="mb-5">What people are saying...</h2>
+                <h2 class="mb-5">Đánh giá từ người dùng</h2>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
                             <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                            <p class="font-weight-light mb-0">"Game này rất hay . Đánh giá 5 sao .  "</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
                             <h5>Fred S.</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                            <p class="font-weight-light mb-0">"Lâu lắm rồi mới chơi 1 game đúng với nguyên tác như vậy . cảm ơn nhà phát hành"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
