--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
-                            <h3>Fully Responsive</h3>
-                            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                            <h3>Nội dung 1</h3>
+                            <p class="lead mb-0">Mô tả ngắn gọn</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-layers m-auto text-primary"></i></div>
-                            <h3>Bootstrap 5 Ready</h3>
-                            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 5 framework!</p>
+                            <h3>Nội dung 2</h3>
+                            <p class="lead mb-0">Mô tả ngắn gọn</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
-                            <h3>Easy to Use</h3>
-                            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                            <h3>Nội dung 3</h3>
+                            <p class="lead mb-0"> Mô tả ngắn gọn </p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,10 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/seven-deadly-sins-1.jfif')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/seven-deadly-sins-1.jfif')">
+                    <!-- <div>
+                        <img src="assets/img/seven-deadly-sins-1.jfif"> -->
+                    </div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Đồ họa đẹp mắt</h2>
                         <p class="lead mb-0">Đồ họa bắt mắt , phù hợp với mọi thiết bị</p>
@@ -113,8 +116,8 @@
                 <div class="row g-0">
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
-                        <h2>Thể loại đa dạng</h2>
-                        <p class="lead mb-0">Lấy cảm hứng từ những bộ anime đình đám như naruto , one piece , jujutsu kaisen , studio chúng tôi đã cho ra mắt nhiều con game nổi tiếng , phù hợp với thị hiếu của giới trẻ.</p>
+                        <h2>Độc lạ nội dung</h2>
+                        <p class="lead mb-0">Cốt truyện được kết hợp giữa bản gốc và những trending hiện nay , đảm bảo sẽ mang đến một cái diện mạo mới cho tính cách các nhân vật !</p>
                     </div>
                 </div>
                 <div class="row g-0">
