--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>GameG</title>
-        <link rel="icon" type="imga/png" href="assets/icon.ico">
+        <link rel="icon" type="image/x-icon" href="assets/icon.ico">
         <!-- Favicon-->
         <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
         <!-- Bootstrap icons-->
@@ -18,10 +18,11 @@
     </head>
     <body>
         <!-- Navigation-->
+        <!-- <img rel="icon" href="assets/icon.ico"> -->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!">GameG </a>
-                <a class="btn btn-primary" href="#signup">Đăng nhập</a>
+                <a class="navbar-brand" href="#!"><img src="assets/icon.png">GameG</a>
+                <!-- <a class="btn btn-primary" href="#signup">Đăng nhập</a> -->
             </div>
         </nav>
         <!-- Masthead-->
@@ -30,6 +31,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
                         <div class="text-center text-white">
+                            
                             <!-- Page heading-->
                             <h1 class="mb-5">Đăng kí ngay để nhận được những phần quà thật thú vị</h1>
                             <!-- Signup form-->
@@ -50,6 +52,7 @@
                                     </div>
                                     <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Đăng kí</button></div>
                                 </div>
+                                <img >
                                 <!-- Submit success message-->
                                 <!---->
                                 <!-- This is what your users will see when the form-->
@@ -80,23 +83,24 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                             <h3>Nội dung 1</h3>
-                            <p class="lead mb-0">Mô tả ngắn gọn</p>
+                            <p class="lead mb-0">GameG là một công ty trẻ trung và năng động, tập trung vào việc phát triển các sản phẩm game độc đáo và mang tính sáng tạo cao.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-layers m-auto text-primary"></i></div>
                             <h3>Nội dung 2</h3>
-                            <p class="lead mb-0">Mô tả ngắn gọn</p>
+                            <p class="lead mb-0">Với đội ngũ nhân viên trẻ tuổi, giàu nhiệt huyết và có tâm huyết với lĩnh vực game, GameG sẽ cho ra mắt nhiều tựa game đáng chú ý và được yêu thích bởi cộng đồng game thủ. Bên cạnh đó, GameG cũng luôn tìm kiếm những cách tiếp cận mới mẻ và đổi mới để tạo ra những sản phẩm game độc đáo và tinh tế hơn.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
                             <h3>Nội dung 3</h3>
-                            <p class="lead mb-0"> Mô tả ngắn gọn </p>
+                            <p class="lead mb-0">  Với tầm nhìn và mục tiêu phát triển bền vững, GameG đang trở thành một trong những startup studio game tiềm năng nhất trên thị trường. </p>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
