update logo and header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <img rel="icon" href="assets/icon.ico"> -->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!"><img src="assets/icon.png">GameG</a>
+                <a class="navbar-brand" href="#!"><img src="assets/new_icon.png"> <b>GameG</b></a>
                 <!-- <a class="btn btn-primary" href="#signup">Đăng nhập</a> -->
             </div>
         </nav>
@@ -103,6 +103,7 @@
                     
                 </div>
             </div>
+            <p class="padding ">Đang làm dở ở đây , xíu quay lại<br> </p>
         </section>
         <!-- Image Showcases-->
         <section class="showcase">
