--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
-                            <h3>Nội dung 1</h3>
+                            <h3>Giới thiệu</h3>
                             <p class="lead mb-0">GameG là một công ty trẻ trung và năng động, tập trung vào việc phát triển các sản phẩm game độc đáo và mang tính sáng tạo cao.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-layers m-auto text-primary"></i></div>
-                            <h3>Nội dung 2</h3>
+                            <h3>Thành công</h3>
                             <p class="lead mb-0">Với đội ngũ nhân viên trẻ tuổi, giàu nhiệt huyết và có tâm huyết với lĩnh vực game, GameG sẽ cho ra mắt nhiều tựa game đáng chú ý và được yêu thích bởi cộng đồng game thủ. Bên cạnh đó, GameG cũng luôn tìm kiếm những cách tiếp cận mới mẻ và đổi mới để tạo ra những sản phẩm game độc đáo và tinh tế hơn.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
-                            <h3>Nội dung 3</h3>
+                            <h3>Định hướng</h3>
                             <p class="lead mb-0">  Với tầm nhìn và mục tiêu phát triển bền vững, GameG đang trở thành một trong những startup studio game tiềm năng nhất trên thị trường. </p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/seven-deadly-sins-1.jfif')">
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')">
                     <!-- <div>
                         <img src="assets/img/seven-deadly-sins-1.jfif"> -->
                     </div>
@@ -143,22 +143,22 @@
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
-                            <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"Game này rất hay . Đánh giá 5 sao .  "</p>
+                            <h5>Thuynguyen@gmail.com</h5>
+                            <p class="font-weight-light mb-0">"Game hay , cho 5 sao "</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
-                            <h5>Fred S.</h5>
-                            <p class="font-weight-light mb-0">"Lâu lắm rồi mới chơi 1 game đúng với nguyên tác như vậy . cảm ơn nhà phát hành"</p>
+                            <h5>jackcody12345@gmail.com</h5>
+                            <p class="font-weight-light mb-0">"Lâu lắm rồi mới chơi 1 game đúng với nguyên tác như vậy "</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
-                            <h5>Sarah W.</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                            <h5>ThuTrangDao@gmail.com</h5>
+                            <p class="font-weight-light mb-0">"Game rất hay "</p>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                                 <div class="col">
                                     <input class="form-control form-control-lg" id="emailAddressBelow" type="email" placeholder="Nhập địa chỉ email" data-sb-validations="required,email" />
                                     <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">Vui lòng nhập tài khoản</div>
-                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Tài khoản Email không hợp lệ/div>
+                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Tài khoản Email không hợp lệ</div>
                                 </div>
                                 <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Gửi</button></div>
                             </div>
@@ -213,8 +213,8 @@
         <footer class="footer bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                        <ul class="list-inline mb-2">
+                    <!-- <div class="col-lg-6 h-100 text-center text-lg-start my-auto"> -->
+                        <!-- <ul class="list-inline mb-2">
                             <li class="list-inline-item"><a href="#!">Thông tin</a></li>
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="#!">Liên lạc</a></li>
@@ -222,10 +222,12 @@
                             <li class="list-inline-item"><a href="#!">Hướng dẫn</a></li>
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="#!">Điều khoản</a></li>
-                        </ul>
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2022. All Rights Reserved.</p>
-                    </div>
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+                        </ul> -->
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Contact:</p>
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Email :</p>
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Copyright &copy; 2023 company. All Rights Reserved.</p>
+                    <!-- </div> -->
+                    <!-- <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
                                 <a href="#!"><i class="bi-facebook fs-3"></i></a>
@@ -237,7 +239,7 @@
                                 <a href="#!"><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </footer>
