--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')">
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/download-2.jfif')">
                     <!-- <div>
                         <img src="assets/img/seven-deadly-sins-1.jfif"> -->
                     </div>
@@ -119,14 +119,14 @@
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/opm-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Độc lạ nội dung</h2>
                         <p class="lead mb-0">Cốt truyện được kết hợp giữa bản gốc và những trending hiện nay , đảm bảo sẽ mang đến một cái diện mạo mới cho tính cách các nhân vật !</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/jujutsu-kaisen.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Đồng bộ và tối ưu</h2>
                         <p class="lead mb-0">Chỉ cần sử dụng 1 tài khoản , bạn đã có thể chơi game cả trên di động lẫn máy tính . Đồng thời game cũng được tối ưu để có thể phù hợp trên mọi thiết bị di động</p>
@@ -225,7 +225,7 @@
                         </ul> -->
                         <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Contact:</p>
                         <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Email :</p>
-                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Copyright &copy; 2023 company. All Rights Reserved.</p>
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Copyright &copy; 2023 GameG. All Rights Reserved.</p>
                     <!-- </div> -->
                     <!-- <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
