--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="#!">Điều khoản</a></li>
                         </ul> -->
-                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Contact:</p>
-                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Email :</p>
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">SDT - Email</p>
+                        <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Address</p>
                         <p class="text-muted small mb-4 mb-lg-0" style="text-align:center">Copyright &copy; 2023 GameG. All Rights Reserved.</p>
                     <!-- </div> -->
                     <!-- <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
