--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>GameG</title>
-        <link rel="icon" type="image/x-icon" href="assets/icon.ico">
+        <title>VTM DIGITAL</title>
+        <link rel="icon" type="image/x-icon" href="assets/dark_V.png">
         <!-- Favicon-->
         <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
         <!-- Bootstrap icons-->
@@ -21,7 +21,7 @@
         <!-- <img rel="icon" href="assets/icon.ico"> -->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!"><img src="assets/new_icon.png"> <b>GameG</b></a>
+                <a class="navbar-brand" href="#!"><img src="assets/V.png"> <b>VTM DIGITAL</b></a>
                 <!-- <a class="btn btn-primary" href="#signup">Đăng nhập</a> -->
             </div>
         </nav>
